kuberenetes-manifests/apibuilder-dev-6640c9a777861636d2d88d8d-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apibuilder-dev-6640c9a777861636d2d88d8d
  namespace: dev
spec:
  gateways:
  - apiwiz-system/apiwiz-gateway
  hosts:
  - tefff-abcd.itorix.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apibuilder-agent
        port:
          number: 8000
      headers:
        request:
          add:
            x-tenant: acme-team-gcp-stage-6640c9a777861636d2d88d8d--ApiBuilder
